Reordered some file structure. Cleared out default content. Reset tests

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "kaboom": "^0.8.0-beta.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
